# Yet-Another-Sha1-Hulud-Scanner

./: .gitignore  README.md  pyproject.toml
.github/agents/: copilot-instructions.md
data/: packages.md  wiz-packages.csv
specs/001-python-scanner/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-python-scanner/checklists/: requirements.md
specs/001-python-scanner/contracts/: cli.md
src/sha1hulud_scanner/: __init__.py  __main__.py  cli.py  scanner.py
src/sha1hulud_scanner/models/: __init__.py  installed_package.py  scan_result.py  vulnerable_package.py
src/sha1hulud_scanner/output/: __init__.py  console.py  json_output.py
src/sha1hulud_scanner/parsers/: __init__.py  base.py  database_parser.py  npm_parser.py  pnpm_parser.py  yarn_parser.py
tests/: __init__.py  conftest.py
tests/fixtures/: package-lock.json  pnpm-lock.yaml
tests/fixtures/sample_vulnerable_db/: packages.md  wiz-packages.csv
tests/integration/: test_cli.py
tests/unit/: test_models.py  test_output.py  test_parsers.py  test_scanner.py
