[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "sha1hulud-scanner"
version = "0.1.0"
description = "A CLI scanner to detect packages affected by the Shai-Hulud 2.0 supply chain attack"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.8"
authors = [
    {name = "maxisam"}
]
keywords = ["security", "supply-chain", "vulnerability", "scanner", "npm", "yarn", "pnpm"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security",
    "Topic :: Software Development :: Build Tools",
]
dependencies = [
    "PyYAML>=6.0",
]

[dependency-groups]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
]

[project.scripts]
sha1hulud-scanner = "sha1hulud_scanner.cli:main"

[project.urls]
Homepage = "https://github.com/maxisam/Yet-Another-Sha1-Hulud-Scanner"
Repository = "https://github.com/maxisam/Yet-Another-Sha1-Hulud-Scanner"
Issues = "https://github.com/maxisam/Yet-Another-Sha1-Hulud-Scanner/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/sha1hulud_scanner"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"

[tool.coverage.run]
source = ["src/sha1hulud_scanner"]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
]
